--- a/.github/workflows/main_scentinel.yml
+++ b/.github/workflows/main_scentinel.yml
@@ -1,4 +1,7 @@
-name: Angular Azure Deployment
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy Node.js app to Azure Web App - scentinel
 
 on:
   push:
@@ -7,32 +10,62 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Set up Node.js version
+        uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: '20.x'
 
-      - name: Install Angular CLI
-        run: npm install -g @angular/cli
-
-      - name: Install dependencies
-        run: npm install
-        working-directory: code-smell-detector
-
-      - name: Build Angular app
+      - name: npm install, build, and test
         run: |
-          cd code-smell-detector
-          ng build --configuration=production --base-href=/
+          npm install
+          npm run build --if-present
+          npm run test --if-present
 
-      - name: Deploy to Azure Web App
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v3
+        with:
+          name: node-app
+          path: release.zip
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v3
+        with:
+          name: node-app
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
+      
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E2C6B9C5EF704CC2B3A279CDC07567A1 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_97FB8BC149F24B6DB295F3A9EB592895 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F7DFE8BE45EA4E588CC1AC7E0BDF2862 }}
+
+      - name: 'Deploy to Azure Web App'
+        id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'scentinel'
-          publish-profile: ${{ secrets.SCENTINEL_AZURE_PUBLISH_PROFILE }}
-          package: .  # Path to your Angular app build output
+          slot-name: 'Production'
+          package: .
+          
