--- a/.github/workflows/main_scentinel.yml
+++ b/.github/workflows/main_scentinel.yml
@@ -21,11 +21,15 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: Install Angular CLI
+        uses: npm install -g @angular/cli
+
       - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
+        working-directory: code-smell-detector
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
