--- a/.github/workflows/main_scentinel.yml
+++ b/.github/workflows/main_scentinel.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: '20.x'
 
       - name: Install Angular CLI
-        uses: npm install -g @angular/cli
+        run: npm install -g @angular/cli
 
       - name: npm install, build, and test
         run: |
