--- a/.github/workflows/main_scentinel.yml
+++ b/.github/workflows/main_scentinel.yml
@@ -21,13 +21,11 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: Install Angular CLI
-        run: npm install -g @angular/cli
-
       - name: npm install, build, and test
         run: |
           npm install
-        working-directory: code-smell-detector
+          npm run build --if-present
+          npm run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -59,9 +57,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E2C6B9C5EF704CC2B3A279CDC07567A1 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_97FB8BC149F24B6DB295F3A9EB592895 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F7DFE8BE45EA4E588CC1AC7E0BDF2862 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_2FDD5053922C476192757A42655593F1 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_EBDDCC60683B44ADBD94622F4FB1F482 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D320CA5FB30B47989053C48225FFA44C }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
