--- a/.github/workflows/main_scentinel.yml
+++ b/.github/workflows/main_scentinel.yml
@@ -14,17 +14,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v2.5.0
 
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: '18.x'
 
       - name: npm install, build, and test
         run: |
+          cd code-smell-detector
           npm install
-        working-directory: code-smell-detector
+          npm install -g @angular/cli
+          ng build
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -44,21 +46,18 @@ jobs:
     permissions:
       id-token: write #This is required for requesting the JWT
 
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
+    steps: 
       - name: Login to Azure
-        uses: azure/login@v1
+        uses: azure/login@v1.4.3
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_2FDD5053922C476192757A42655593F1 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_EBDDCC60683B44ADBD94622F4FB1F482 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D320CA5FB30B47989053C48225FFA44C }}
+
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v3
+        with:
+          name: node-app
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -66,5 +65,5 @@ jobs:
         with:
           app-name: 'scentinel'
           slot-name: 'Production'
-          package: .
+          package: release.zip
           
