--- a/code-smell-detector/angular.json
+++ b/code-smell-detector/angular.json
@@ -71,7 +71,10 @@
             }
           },
           "defaultConfiguration": "development"
-        },
+          "options": {
+            "port": 8080
+          }
+        }
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
